feat: stream application logs
